# thyme-compsec

./: .gitignore  Dockerfile.frontend  Dockerfile.server  README.md  docker-compose.yml
frontend/: crysys_server.postman_collection.json
frontend/src/main/: package-lock.json  package.json
frontend/src/main/frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/main/frontend/src/app/: app.component.css  app.module.ts
frontend/src/main/frontend/src/app/ecommerce/: ecommerce.component.html  ecommerce.component.ts
frontend/thyme-frontend/: next.config.js  package-lock.json  package.json  server.js
frontend/thyme-frontend/components/: caff-card.js  caff-data.js  header.js  rest-api-calls.js  route-guard.js
frontend/thyme-frontend/pages/: _app.tsx  admin.js  caff.js  index.js  logout.js  search.js  signin.js  signup.js  upload.js
frontend/thyme-frontend/pages/caff/: [id].js
frontend/thyme-frontend/public/: thyme.png~
frontend/thyme-frontend/styles/: globals.css
native/: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  build.sh
native/include/: parser.h
native/src/: fuzz.cpp  main.cpp  parser.cpp
native/src/include/: parser.h
native/src/parser/: parser.cpp
native/src/tests/fuzzing/: test_fuzzer.cpp
server/: build.gradle
server/src/main/resources/: application.properties  application.properties.bkp  data.sql
server/src/main/resources/caffs/2001/result/: _000.json  details
server/src/main/resources/caffs/2002/result/: details
server/src/main/resources/parser/: CAFF
util/: certi-gen.sh
(+31 files in other folders)
